Addressed issue #31 by duplicating the implemented animations from the mobile display and applying them to other larger displays. Additionally, animations for the heading and sub-heading of the projects section were implemented, as these elements are initially visible on larger displays.

--- a/styles/_large-monitors.scss
+++ b/styles/_large-monitors.scss
@@ -120,10 +120,12 @@
 
                     &:nth-child(2) {
                         font-style: italic;
+                        animation: fadeIn 1.6s ease-in-out forwards;
                     }
 
                     & + h2 {
                         margin-top: 2em;
+                        animation: fadeIn 1.3s ease-in-out forwards;
                     }
                 }
 
@@ -132,6 +134,18 @@
                     font-weight: 600;
                     margin-bottom: 0.3em;
                     text-align: left;
+                    animation: fadeIn 1s ease-in-out forwards;
+                }
+
+                @keyframes fadeIn {
+                    from {
+                        opacity: 0;
+                        transform: translateY(10px);
+                    }
+                    to {
+                        opacity: 1;
+                        transform: translateY(0);
+                    }
                 }
 
                 .buttons {
@@ -140,10 +154,23 @@
             }
 
             .hero-img {
+                opacity: 0;
                 margin-top: 2em;
                 margin-bottom: 4em;
                 max-width: 40%;
                 height: auto;
+                animation: fadeInAndBlurRemoval 1s ease-in-out 0.5s forwards;
+            }
+
+            @keyframes fadeInAndBlurRemoval {
+                from {
+                    opacity: 0;
+                    filter: blur(10px);
+                }
+                to {
+                    opacity: 1;
+                    filter: blur(0);
+                }
             }
         }
 
@@ -168,11 +195,13 @@
         h3 {
             margin-bottom: 1em;
             font-size: 3rem;
+            animation: fadeIn 2.0s ease-in-out forwards;
         }
       
         h4 {
             margin-bottom: 4em;
             font-size: 2rem;
+            animation: fadeIn 2.3s ease-in-out forwards;
         }
       
         .featured-projects {
