--- a/styles/_monitor-displays.scss
+++ b/styles/_monitor-displays.scss
@@ -121,11 +121,13 @@
 
                         &:nth-child(2) {
                             font-style: italic;
+                            animation: fadeIn 1.6s ease-in-out forwards;
                         }
 
                         & + h2 {
                             margin-top: 2em;
                             font-size: 2rem;
+                            animation: fadeIn 1.3s ease-in-out forwards;
                         }
                     }
     
@@ -134,6 +136,18 @@
                         font-weight: 600;
                         margin-bottom: 0.3em;
                         text-align: left;
+                        animation: fadeIn 1s ease-in-out forwards;
+                    }
+
+                    @keyframes fadeIn {
+                        from {
+                            opacity: 0;
+                            transform: translateY(10px);
+                        }
+                        to {
+                            opacity: 1;
+                            transform: translateY(0);
+                        }
                     }
     
                     .buttons {
@@ -142,10 +156,23 @@
                 }
     
                 .hero-img {
+                    opacity: 0;
                     margin-top: 2em;
                     margin-bottom: 4em;
                     max-width: 40%;
                     height: auto;
+                    animation: fadeInAndBlurRemoval 1s ease-in-out 0.5s forwards;
+                }
+
+                @keyframes fadeInAndBlurRemoval {
+                    from {
+                        opacity: 0;
+                        filter: blur(10px);
+                    }
+                    to {
+                        opacity: 1;
+                        filter: blur(0);
+                    }
                 }
             }
     
@@ -169,11 +196,13 @@
 
             h3 {
                 margin-bottom: 1em;
+                animation: fadeIn 2.0s ease-in-out forwards;
             }
           
             h4 {
                 margin-bottom: 4em;
                 font-size: 2.5rem;
+                animation: fadeIn 2.3s ease-in-out forwards;
             }
           
             .featured-projects {
