--- a/styles/style.css
+++ b/styles/style.css
@@ -1706,26 +1706,51 @@ h4 {
   }
   .container .hero-section .hero-container .hero-details p:nth-child(2), .container .hero-section .hero-container .hero-details h2:nth-child(2) {
     font-style: italic;
+    animation: fadeIn 1.6s ease-in-out forwards;
   }
   .container .hero-section .hero-container .hero-details p + h2, .container .hero-section .hero-container .hero-details h2 + h2 {
     margin-top: 1em;
     font-size: 2rem;
+    animation: fadeIn 1.3s ease-in-out forwards;
   }
   .container .hero-section .hero-container .hero-details h1 {
     font-size: 5rem;
     font-weight: 600;
     margin-bottom: 0.3em;
     text-align: left;
+    animation: fadeIn 1s ease-in-out forwards;
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
   .container .hero-section .hero-container .hero-details .buttons {
     display: none;
   }
   .container .hero-section .hero-container .hero-img {
+    opacity: 0;
     margin-top: 2em;
     margin-bottom: 4em;
     max-width: 50%;
     min-width: 25%;
     height: auto;
+    animation: fadeInAndBlurRemoval 1s ease-in-out 0.5s forwards;
+  }
+  @keyframes fadeInAndBlurRemoval {
+    from {
+      opacity: 0;
+      filter: blur(10px);
+    }
+    to {
+      opacity: 1;
+      filter: blur(0);
+    }
   }
   .container .hero-section #buttons2 {
     display: none;
@@ -1739,11 +1764,13 @@ h4 {
   }
   .container #projects.projects-section h3 {
     font-size: 3.5rem;
+    animation: fadeIn 2s ease-in-out forwards;
   }
   .container #projects.projects-section h4 {
     margin-top: 0.5em;
     margin-bottom: 3em;
     font-size: 2rem;
+    animation: fadeIn 2.3s ease-in-out forwards;
   }
   .container #projects.projects-section .featured-projects {
     overflow: hidden;
@@ -2403,25 +2430,50 @@ h4 {
   }
   .hero-section .hero-container .hero-details p:nth-child(2), .hero-section .hero-container .hero-details h2:nth-child(2) {
     font-style: italic;
+    animation: fadeIn 1.6s ease-in-out forwards;
   }
   .hero-section .hero-container .hero-details p + h2, .hero-section .hero-container .hero-details h2 + h2 {
     margin-top: 2em;
     font-size: 2rem;
+    animation: fadeIn 1.3s ease-in-out forwards;
   }
   .hero-section .hero-container .hero-details h1 {
     font-size: 5rem;
     font-weight: 600;
     margin-bottom: 0.3em;
     text-align: left;
+    animation: fadeIn 1s ease-in-out forwards;
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
   .hero-section .hero-container .hero-details .buttons {
     display: none;
   }
   .hero-section .hero-container .hero-img {
+    opacity: 0;
     margin-top: 2em;
     margin-bottom: 4em;
     max-width: 40%;
     height: auto;
+    animation: fadeInAndBlurRemoval 1s ease-in-out 0.5s forwards;
+  }
+  @keyframes fadeInAndBlurRemoval {
+    from {
+      opacity: 0;
+      filter: blur(10px);
+    }
+    to {
+      opacity: 1;
+      filter: blur(0);
+    }
   }
   .hero-section #buttons2 {
     display: none;
@@ -2438,10 +2490,12 @@ h4 {
   }
   #projects.projects-section h3 {
     margin-bottom: 1em;
+    animation: fadeIn 2s ease-in-out forwards;
   }
   #projects.projects-section h4 {
     margin-bottom: 4em;
     font-size: 2.5rem;
+    animation: fadeIn 2.3s ease-in-out forwards;
   }
   #projects.projects-section .featured-projects {
     position: relative;
@@ -3295,24 +3349,49 @@ h4 {
   }
   .hero-section .hero-container .hero-details p:nth-child(2), .hero-section .hero-container .hero-details h2:nth-child(2) {
     font-style: italic;
+    animation: fadeIn 1.6s ease-in-out forwards;
   }
   .hero-section .hero-container .hero-details p + h2, .hero-section .hero-container .hero-details h2 + h2 {
     margin-top: 2em;
+    animation: fadeIn 1.3s ease-in-out forwards;
   }
   .hero-section .hero-container .hero-details h1 {
     font-size: 5rem;
     font-weight: 600;
     margin-bottom: 0.3em;
     text-align: left;
+    animation: fadeIn 1s ease-in-out forwards;
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
   .hero-section .hero-container .hero-details .buttons {
     display: none;
   }
   .hero-section .hero-container .hero-img {
+    opacity: 0;
     margin-top: 2em;
     margin-bottom: 4em;
     max-width: 40%;
     height: auto;
+    animation: fadeInAndBlurRemoval 1s ease-in-out 0.5s forwards;
+  }
+  @keyframes fadeInAndBlurRemoval {
+    from {
+      opacity: 0;
+      filter: blur(10px);
+    }
+    to {
+      opacity: 1;
+      filter: blur(0);
+    }
   }
   .hero-section #buttons2 {
     display: none;
@@ -3330,10 +3409,12 @@ h4 {
   #projects.projects-section h3 {
     margin-bottom: 1em;
     font-size: 3rem;
+    animation: fadeIn 2s ease-in-out forwards;
   }
   #projects.projects-section h4 {
     margin-bottom: 4em;
     font-size: 2rem;
+    animation: fadeIn 2.3s ease-in-out forwards;
   }
   #projects.projects-section .featured-projects {
     position: relative;
